# Music-platform1

./: README.md  pyproject.toml
albums/: models.py
artists/: models.py
config/: settings.py
