[tool.poetry]
name = "music-platform1"
version = "0.1.0"
description = ""
authors = ["abood-74 <abdelrahmanashour45@gmail.com>"]
readme = "README.md"
packages = [{include = "music_platform1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
